switched toggle to brand name instead of span class which resolved the bug on mobile

--- a/src/Components/Navigation.css
+++ b/src/Components/Navigation.css
@@ -39,7 +39,7 @@ body {
   height: 20px;
 }
 
-.toggle-buttons > .bar {
+.toggle-button .bar {
   height: 3px;
   width: 100%;
   color: white;
@@ -52,10 +52,10 @@ body {
   }
 
   .navbar-links {
-    display: none;
     background-color: grey;
     height: 100vh;
-    display: flex;
+    display: none;
+    width: 100%;
   }
 
   .navbar-links ul {
